[package]
name = "iris"
version = "0.5.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
poise = "0.6.1"
reqwest = "0.13.1"
serde = "1.0.228"
serenity = "0.12.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.11"
tracing-subscriber = "0.3.22"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
